force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is manually populated. It is required. This field specifies the group a route is being linked to.</description>
    <inlineHelpText>Choose a group.</inlineHelpText>
    <label>Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Route Groups</relationshipLabel>
    <relationshipName>Route_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>