force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Has_Visibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Has_Visibility_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is automatically populated via workflow. This field indicates whether or not the Visibility Criteria field has a value.</description>
    <label>Has Visibility Criteria</label>
    <type>Checkbox</type>
</CustomField>