force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Is_Default_Context_Child__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Default_Context_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. If enabled, the route this is associated with will be displayed as the default subroute for its parent route—unless its parent route has a self-referencing subroute, in which case the self-referencing subroute is always used as the default. If disabled, the route is not set as the default.</description>
    <label>Is Default Context</label>
    <type>Checkbox</type>
</CustomField>