force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Is_Forward_Navigation_Disabled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Forward_Navigation_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. If enabled, this field prevents the user from selecting the associated route from left navigation or subnavigation if they are on a route of lower order. The user can still navigate backwards to any route with these navigation options. If disabled, the user is not prevented from using these navigation options.</description>
    <inlineHelpText>Controls ability to use forward routing functionality.</inlineHelpText>
    <label>Is Forward Navigation Disabled</label>
    <type>Checkbox</type>
</CustomField>