force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. It is optional. This field determines whether a route is displayed in the navigation or subnavigation bar. It does not support tools or actions.</description>
    <inlineHelpText>Controls route visibility.</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>