force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Orchestration_Step__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Orchestration_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system or administrator populates this optional text field with the process builder string name to call the current step the system uses for processing. By default, it is blank.</description>
    <inlineHelpText>This system or administrator populated field displays the process builder string name to call the current step the system uses for processing.</inlineHelpText>
    <label>Orchestration Step</label>
    <referenceTo>nFORCE__Workflow_Orchestration__c</referenceTo>
    <relationshipLabel>Route Groups</relationshipLabel>
    <relationshipName>Route_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>