force-app/main/default/objects/nFORCE__Route_Group__c/fields/nFORCE__Route__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is manually populated. It is required. This field specifies the route a group is being linked to.</description>
    <inlineHelpText>Choose a route.</inlineHelpText>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Route Groups</relationshipLabel>
    <relationshipName>Route_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>